primeiro site HTML

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha primeira pagina HTML</title>
+    <title> Empresa </title>
 </head>
 <body>
-    
+    <header class=" Cabecalho">
+<img src="">
+<H1 class=" Cabecalho--marca">
+</H1>
+</header>
+<nav>
+    <ul><li a href ""></li>
+    </ul>
+</nav>
+<main>
+<img class="">
+<p>    </p>
+</main>
+<section class="">
+    <img class="">
+    <p>      </p>
+</section>
+<footer>
+    <p>       </p>
+</footer>
 </body>
 </html>
