continuação da revisao de vscode

--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <title> Empresa </title>
 </head>
 <body>
-    <header class=" Cabecalho">
-<img src="">
-<H1 class=" Cabecalho--marca">
-</H1>
-</header>
-<nav>
-    <ul><li a href ""></li>
+    <header class="cabecalho">
+<H1 class=" cabecalho__titulo">Minha primeira aula de GitHub com VSCode.</H1>
+<nav class="cabecalho__menu">
     </ul>
 </nav>
+</header>
 <main>
 <img class="">
 <p>    </p>
