--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="cabecalho">
 <H1 class=" cabecalho__titulo">Minha primeira aula de GitHub com VSCode.</H1>
 <nav class="cabecalho__menu">
-    <a hhref="#">HOME</a>
+    <a href="#">HOME</a>
         <a href="#">Quem Somos</a>
 </nav>
 </header>
