--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <header class="cabecalho">
-<H1 class=" cabecalho__titulo">Minha primeira aula de GitHub com VSCode.</H1>
+<H1 class=" cabecalho__titulo">EMEF Prof Alcina Dantas Feijão</H1>
+</header>
 <nav class="cabecalho__menu">
     <a href="#">HOME</a>
         <a href="#">Quem Somos</a>
 </nav>
-</header>
+
 <main>
 <img class="">
 <p>    </p>
