--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title> Empresa </title>
+    <title> Portifólio </title>
 </head>
 <body>
     <header class="cabecalho">
@@ -16,6 +16,12 @@
 </nav>
 
 <main>
+    <h2>Pedro Yudi Chibana Levy</h2>
+    Aluno do Alcina Dantas Feijão desde 2022,
+    iniciando o teceiro ano do ensino médio e cursando o 
+    ensino técnico de TI, tenho a preferência em programação HTML
+    e CSS e sou ruim em programação java Script e SQL.
+    
 <img class="">
 <p>    </p>
 </main>
