--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 <main>
     <h2>Pedro Yudi Chibana Levy</h2>
-    Aluno do Alcina Dantas Feijão desde 2022,
-    iniciando o teceiro ano do ensino médio e cursando o 
-    ensino técnico de TI, tenho a preferência em programação HTML
-    e CSS e sou ruim em programação java Script e SQL.
+    Aluno do Alcina Dantas Feijão desde 2022,<br>
+    iniciando o teceiro ano do ensino médio e cursando o <br>
+    ensino técnico de TI, tenho a preferência em programação HTML<br>
+    e CSS e sou ruim em programação java Script e SQL.<br>
     
 <img class="">
 <p>    </p>
