--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-<H1 class=" cabecalho__titulo">EMEF Prof Alcina Dantas Feijão</H1>
+<H1 class=" cabecalho__titulo">EME Prof Alcina Dantas Feijão</H1>
 </header>
 <nav class="cabecalho__menu">
     <a href="#">HOME</a>
