--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
+        <img src="" alt="">
 <H1 class=" cabecalho__titulo">EME Prof Alcina Dantas Feijão</H1>
 </header>
 <nav class="cabecalho__menu">
